--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "react": "^16.1.1",
     "react-big-calendar": "^0.17.0",
     "react-dom": "^16.1.1",
+    "react-modal": "^3.1.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "simple-react-modal": "^0.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
